# Desktop_Timer

./: Cargo.toml  Packager.toml  README.md
.cargo-packager/wix/x64/: main.wxs
icons/: icon.icns
src/: main.rs
wix/: main.wxs
