[package]
name = "Desktop_Timer"
version = "0.1.0"
edition = "2024"
authors = ["YourName <your-email@example.com>"]
description = "A simple stopwatch app made with Rust and iced."

[dependencies]
iced = { version = "0.10", features = ["async-std", "wgpu", "tokio"] }

iced_native = "0.10"
iced_futures = "0.7"

async-std = { version = "1.12", features = ["attributes"] }
