[package]
name = "rtm"               
version = "0.1.0"
edition = "2024"           
authors = ["YourName <your-email@example.com>"]
description = "RTM: A keyboard-focused stopwatch app made with Rust and iced."

[dependencies]
iced = { version = "0.10", features = ["async-std", "wgpu", "tokio", "canvas"] }
async-std = { version = "1.12", features = ["attributes"] }

# 実行ファイルの設定
[[bin]]
name = "rtm"               # ターミナルで叩くコマンド名
path = "src/main.rs"

[package.metadata.packager]
product_name = "RTM"       # インストーラーやGUI上での表示名
identifier = "com.user.rtm"
icons = ["icons/icon.ico"]
